2003-10-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/vlad.h :
	* common/list.cpp :

	  - VLAD_NOTUNIQUE is a duplicate of VLAD_DUPLICATE (stupid).

	* kb/identifier.cpp :
	* kb/identifier.h :
	* kb/symtab.cpp :
	* kb/symtab.h :

	  - Replaced identifier type and group flag with an integer to
	    represent both.

	  - Added defines and macros for identifier types.

	  - Modified identifier so that the cmp() function will allow
	    the use of wildcards (name == NULL and type == 0 will match
	    anything).

	  - Added another get() function in symtab to allow an array of
	    identifier of a particular type/group to be retrieved.

2003-10-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/identifier.cpp :
	* kb/identifier.h :
	* kb/symtab.cpp :

	  - Renamed the enum identifier type names with an _ident
	    suffix to avoid name clashes with access() in unistd.h.

2003-01-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/list.cpp :

	  - Fixed default constructor.

	  - Added debug code.

	* kb/symtab.cpp :

	  - Fixed default constructor to call the proper base constructor.

2003-01-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* sample/chinese_wall :

	  - Added sample program.

2003-01-25  Vino Crescini  <jcrescin@cit.uws.ued.au>

	* common/vlad.h :

	  - Added a new error code for unique-item lists.

	* common/list.cpp :
	* common/list.h :
	* kb/symtab.cpp :

	  - Added a flag to the list to identify whether it should allow
	    identical items to be added or not. Symtab is set to unique.

	  - Added provisions to allow retrieval of identical items from
	    the list. Matching nodes are passed through an array.

	* kb/identifier.cpp :
	* kb/identifier.h :

	  - Added functions to return class attributes.

2003-01-24  Vino Crescini  <jcrescin@cit.uws.ued.au>

	* kb/Makefile.in :
	* kb/symtab.h :
	* kb/symtab.cpp :
	* kb/identifier.h :
	* kb/identifier.cpp :

	  - Added a class for the symbol table. To be used to store identifier